--- a/maas-configure-net-int/meta/main.yml
+++ b/maas-configure-net-int/meta/main.yml
@@ -2,7 +2,7 @@ galaxy_info:
   author: Emre Baykal
   description: Physical Server Deployment Project by using Canonical Maas Software
   company: -- 
-  license: GPLv3
+  license: Apache-2.0
   min_ansible_version: 2.9
   galaxy_tags: []
 dependencies: []
