--- a/maas-configure-physical-server/tasks/01-power-state.yml
+++ b/maas-configure-physical-server/tasks/01-power-state.yml
@@ -41,20 +41,8 @@
     var=power.json.error
   when: power-state == "Off"
 
-- name: Wait for Server Power State InPostDiscoveryComplete
-  uri:
-    url: "https://{{ ilo_address }}/redfish/v1/systems/1"
-    method: GET
-    return_content: yes
-    body: ""
-    body_format: json
-    validate_certs: no
-    user: "{{ ilo_username }}"
-    password: "{{ ilo_password }}"
-    force_basic_auth: yes
-    status_code: 200
+- name: Sleep for 180 seconds and continue with play
+  wait_for:
+    timeout: 180
+  when: power-state == "Off"
   delegate_to: localhost
-  register: poststate
-  until: poststate.json.Oem.Hpe.PostState == "InPostDiscoveryComplete"
-  retries: 20
-  delay: 15
