--- a/host_vars/uefiesxitst.yml
+++ b/host_vars/uefiesxitst.yml
@@ -2,17 +2,20 @@
   #### Guest Based Variables ####
   
   # Destination Server Network Config
-  dep_int_mac_address : XX:XX:XX:XX:XX:XX
+  dep_int_mac_address : 00:50:56:83:2e:a5
   # Domain
-  domain: test.local
+  domain: hpetrlab.local
   # Zone
-  zone: TEST-LAB
+  zone: HPE-TUR-LAB
   # Public Network Subnet:
-  subnet: 00.00.00.0/24
+  subnet: 10.254.254.0/24
   # Public Network IP Address
-  pub_net_ip: 00.00.00.00
-  # Public Network MAC Address
-  pub_net_mac_address: XX:XX:XX:XX:XX:XX
+  pub_net_ip: 10.254.254.185
+  # Public Network I MAC Address
+  pub_net1_mac_address: 00:50:56:83:74:03
+  # Public Network II MAC Address
+  pub_net2_mac_address: 00:50:56:83:03:77
+
 
   ## Destination Server Storage Config (Size GB)
   boot_partition_size: 
@@ -36,12 +39,12 @@
   motherboard_firmware: efi
 
   ## Server State
-  server_state: physical
+  server_state: virtual
 
   ## HPE ILO Information
-  ilo_address: 00.00.00.00
-  ilo_username: admin
-  ilo_password: xxxxx
+  ilo_address: 
+  ilo_username: 
+  ilo_password: 
 
   # OS Data Logical Drive
   OS_LogicalDriveName: OS
