--- a/host_vars/uefirheltst.yml
+++ b/host_vars/uefirheltst.yml
@@ -2,17 +2,20 @@
   #### Guest Based Variables ####
   
   # Destination Server Network Config
-  dep_int_mac_address : XX:XX:XX:XX:XX:XX
+  dep_int_mac_address : 00:50:56:83:d2:b4
   # Domain
-  domain: test.local
+  domain: hpetrlab.local
   # Zone
-  zone: TEST-LAB
+  zone: HPE-TUR-LAB
   # Public Network Subnet:
-  subnet: 00.00.00.0/24
+  subnet: 10.254.254.0/24
   # Public Network IP Address
-  pub_net_ip: 00.00.00.00
-  # Public Network MAC Address
-  pub_net_mac_address: XX:XX:XX:XX:XX:XX
+  pub_net_ip: 10.254.254.182
+  # Public Network I MAC Address
+  pub_net1_mac_address: 00:50:56:83:0e:33
+  # Public Network II MAC Address
+  pub_net2_mac_address: 00:50:56:83:92:32
+
 
   ## Destination Server Storage Config (Size GB)
   boot_partition_size: 1
@@ -33,7 +36,7 @@
   distro_version: 8.5
 
   ## Motherboard Firmware
-  motherboard_firmware: bios
+  motherboard_firmware: efi
 
   ## Server State
   server_state: virtual
@@ -45,7 +48,7 @@
 
   # OS Data Logical Drive
   OS_LogicalDriveName: OS
-  OS_Raid: 
+  OS_Raid: Raid1
   #Set to -1 to use all remaining space for maximum size
-  OS_CapacityGiB: 
+  OS_CapacityGiB: 120
 
