--- a/host_vars/uefirheltst2.yml
+++ b/host_vars/uefirheltst2.yml
@@ -2,17 +2,20 @@
   #### Guest Based Variables ####
   
   # Destination Server Network Config
-  dep_int_mac_address : XX:XX:XX:XX:XX:XX
+  dep_int_mac_address : 00:50:56:83:e8:2f
   # Domain
-  domain: test.local
+  domain: hpetrlab.local
   # Zone
-  zone: TEST-LAB
+  zone: HPE-TUR-LAB
   # Public Network Subnet:
-  subnet: 00.00.00.0/24
+  subnet: 10.254.254.0/24
   # Public Network IP Address
-  pub_net_ip: 00.00.00.00
-  # Public Network MAC Address
-  pub_net_mac_address: XX:XX:XX:XX:XX:XX
+  pub_net_ip: 10.254.254.183
+  # Public Network I MAC Address
+  pub_net1_mac_address: 00:50:56:83:0e:e9
+  # Public Network II MAC Address
+  pub_net2_mac_address: 00:50:56:83:e3:6a
+
 
   ## Destination Server Storage Config (Size GB)
   boot_partition_size: 1
@@ -20,28 +23,28 @@
   swap_partition_size: 4
   swap_partition_format: swap
   root_partition_size: 24
-  root_partition_format: xfs
-  var_partition_size: 8
-  var_partition_format: xfs
-  home_partition_size: 8
-  home_partition_format: xfs
-  tmp_partition_size: 8
-  tmp_partition_format: xfs
+  root_partition_format: ext4
+  var_partition_size: 12
+  var_partition_format: ext4
+  home_partition_size: 12
+  home_partition_format: ext4
+  tmp_partition_size: 12
+  tmp_partition_format: ext4
 
   ## Deployed OS Version
   distro: rhel
-  distro_version: 8.5
+  distro_version: 7.9
 
   ## Motherboard Firmware
   motherboard_firmware: efi
 
   ## Server State
-  server_state: physical
+  server_state: virtual
 
   ## HPE ILO Information
-  ilo_address: 00.00.00.00
-  ilo_username: admin
-  ilo_password: xxxxx
+  ilo_address: 
+  ilo_username: 
+  ilo_password: 
 
   # OS Data Logical Drive
   OS_LogicalDriveName: OS
